--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
                 alt="Photographer takes a photo of the girl.">
         </div>
         <section class="About-photographer">
-            <h2 class="About-photographer__title">About Ryan Allen</h2>
+            <h2 class="About-photographer__title line line-left">About Ryan Allen</h2>
             <hr class="About-photographer__line">
-            <p class="About-photographer__text">PROFESSIONAL PHOTOGRAPHER TAKING YOUR BRAND AND IDENTITY TO THE NEXT
-                LEVEL.</p>
+            <p class="About-photographer__text">Professional photographer taking your brand and identify to the next level.</p>
             <p class="About-photographer__text">Having worked and learned from world artists such as John Maison, Steven
                 Ferrel, Stanley Fingerstone, and Pierre de Fontanier in the course of his photographic sojourn at New
                 York, Ryan is undoubtedly a real craftsman who is able to see the beauty in ordinary things. </p>
@@ -79,7 +78,7 @@
         <div class="latest-work">
             <h2 class="latest-work__title">Latest Works</h2>
             <hr class="latest-work__line">
-            <p class="latest-work__text">RYAN'S PASSION IS PHOTOSHOOTS FOR LOOKBOOKS AND COMMERCIALS.</p>
+            <p class="latest-work__text subtitle uppercase text-align-center">Ryan's passion is photoshoots for lookbook and commercial.</p>
             <div class="latest-work__photos">
                 <img class="latest-work__image" width="300" src="img/girl_hides_from_sun.png"
                     alt="Girl hides from the sun">
