--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R.Allen Photography</title>
 </head>
+
 <body>
     <!--Новосядло Олексій-->
     <!-- Максим Мельник -->
@@ -65,7 +67,8 @@
         <section class="About-photographer">
             <h2 class="About-photographer__title line line-left">About Ryan Allen</h2>
             <hr class="About-photographer__line">
-            <p class="About-photographer__text">Professional photographer taking your brand and identify to the next level.</p>
+            <p class="About-photographer__text">Professional photographer taking your brand and identify to the next
+                level.</p>
             <p class="About-photographer__text">Having worked and learned from world artists such as John Maison, Steven
                 Ferrel, Stanley Fingerstone, and Pierre de Fontanier in the course of his photographic sojourn at New
                 York, Ryan is undoubtedly a real craftsman who is able to see the beauty in ordinary things. </p>
@@ -78,7 +81,8 @@
         <div class="latest-work">
             <h2 class="latest-work__title">Latest Works</h2>
             <hr class="latest-work__line">
-            <p class="latest-work__text subtitle uppercase text-align-center">Ryan's passion is photoshoots for lookbook and commercial.</p>
+            <p class="latest-work__text subtitle uppercase text-align-center">Ryan's passion is photoshoots for lookbook
+                and commercial.</p>
             <div class="latest-work__photos">
                 <img class="latest-work__image" width="300" src="img/girl_hides_from_sun.png"
                     alt="Girl hides from the sun">
@@ -131,7 +135,10 @@
                     <h3 class="why_ryan__h3">Vast Experience</h3>
                     <p class="why_ryan__card_text">Ryan has been photographing for more than 10 years, 4 of which
                         he has worked as a fashion photographer.</p>
-	@@ -145,7 +145,7 @@ <h3 class="why_ryan__h3">Vast Experience</h3>
+                    <ul class="why_ryan__points">
+                        <li>58 clients in the USA</li>
+                        <li>10 000+ edited photos</li>
+                        <li>Shooting for 5+ top magazines</li>
                     </ul>
                 </div>
                 <div class="why_ryan__icons_cards">
@@ -139,7 +146,10 @@
                     <h3 class="why_ryan__h3">Modern Equipment</h3>
                     <p class="why_ryan__card_text">He uses only the latest equipment which provides amazing quality and
                         highlights the details in every frame.</p>
-	@@ -156,7 +156,7 @@ <h3 class="why_ryan__h3">Modern Equipment</h3>
+                    <ul class="why_ryan__points">
+                        <li>Canon EOS 5D Mark IV 24-105L IS II</li>
+                        <li>Canon EF 24-70mm f/2.8 L II USM lens</li>
+                        <li>OWERPLANT UV 95 mm color filter</li>
                     </ul>
                 </div>
                 <div class="why_ryan__icons_cards">
@@ -287,4 +297,5 @@
     <footer class="footer">
     </footer>
 </body>
+
 </html>
