--- a/index.html
+++ b/index.html
@@ -98,29 +98,29 @@
             <hr class="main__banner-line">
             <p class="opportunitties">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
             <ul class="services__info">
-                <li>
+                <li class="portraits">
                     <img class="aperture-icon" src="img/aperture-icon.png" alt="aperture-icon">
-                    <h3>Portraits</h3>
-                    <p>Setting the right accents in beautiful portraits.</p>
-                    <a href="#">REQUEST A QUOTE</a>
+                    <h3 class="sevrvices__portraits">Portraits</h3>
+                    <p class="services__portraits__big-text">Setting the right accents in beautiful portraits.</p>
+                    <a class="services__portraits__request-a-quote" href="#">REQUEST A QUOTE</a>
                 </li>
-                <li>
+                <li class="streetphoto">
                     <img class="streetphoto-icon" src="img/streetphoto-icon.png" alt="streetphoto-icon">
-                    <h3>Street Style</h3>
-                    <p>Catching the brightest moments in the scenery of the big city.</p>
-                    <a href="#">REQUEST A QUOTE</a>
+                    <h3 class="sevrvices__street-style">Street Style</h3>
+                    <p class="services__street-style__big-text">Catching the brightest moments in the scenery of the big city.</p>
+                    <a class="services__street-style__request-a-quote" href="#">REQUEST A QUOTE</a>
                 </li>
-                <li>
+                <li class="advertising">
                     <img class="camera-icon" src="img/camera-icon.png" alt="camera-icon">
-                    <h3>Advertising</h3>
-                    <p>Shootings for advertising campaigns and e-commerce.</p>
-                    <a href="#">REQUEST A QUOTE</a>
+                    <h3 class="services__advertising">Advertising</h3>
+                    <p class="services__advertising__big-text">Shootings for advertising campaigns and e-commerce.</p>
+                    <a class="services__advertising__request-a-quote" href="#">REQUEST A QUOTE</a>
                 </li>
-                <li>
+                <li class="events">
                     <img class="lens-icon" src="img/lens-icon.png" alt="lens-icon">
-                    <h3>Events</h3>
-                    <p>Setting the right accents in beautiful portraits.</p>
-                    <a href="#">REQUEST A QUOTE</a>
+                    <h3 class="services__events">Events</h3>
+                    <p class="services__events__big-text">Setting the right accents in beautiful portraits.</p>
+                    <a class="services__events__request-a-quote" href="#">REQUEST A QUOTE</a>
                 </li>
             </ul>
         </section>
