--- a/index.html
+++ b/index.html
@@ -228,61 +228,101 @@
                 </div>
             </div>
         </section>
-        <!--Block-12 Olha Stanislavska-->
-        <section class="portfolio">
-            <h2 class="portfolio__title h2-title text-align-center">Portfolio</h2>
-            <hr class="portfolio__line line line-center">
-            <p class="portfolio__subtitle subtitle uppercase">Every frame is important. Every photoshoot is art.</p>
-            <img class="portfolio__image" width="360" src="img/portfolio-girl-in-lush-dress.png"
-                alt="A girl in a lush dress">
-            <img class="portfolio__image" width="360" src="img/portfolio-girl-with-mirror.png"
-                alt="A girl with a mirror">
-            <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-flower-earring.png"
-                alt="A portrait of the girl in flower earring">
-            <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-hand.png"
-                alt="A portrait of the girl with hand near her face">
+
+        <!--Block-11 "pricing" Maksym Melnyk -->
+        <a name="pricing"></a>
+        <section class="pricing">
+            <section>
+            <h2 class="h2-title text-align-center">Pricing</h2>
+            <hr class="line line-center">
+            <p class="subtitle uppercase">the cost of shooting can be discussed according to the conditions.</p>
+            </section>
+            <section>
+            <img width="150" src="img/pricing_portraits.png" alt="Portraits"
+            <p class="service name">Portraits</p>
+            <p class="costs">from $120/hour</p>
+            <p class="pricing_description">Capturing your beauty in every detail. The price includes 3 styles and 20 edited photos per style.</p>
+            <a href="#contact-form">Learn more</p>
+            </section>
+            <section>
+            <img width="150" src="img/pricing_street_style.png" alt="Street Style"
+            <p class="service name">Street Style</p>
+            <p class="costs">from $130/hour</p>
+            <p class="pricing_description">It is the best option to show your brand in the everyday scenery. Changing tent provided.</p>
+            <a href="#contact-form">Learn more</p>
+            </section>
+            <section>
+            <img width="150" src="img/pricing_events.png" alt="Events"
+            <p class="service name">Events</p>
+            <p class="costs">from $150/hour</p>
+            <p class="pricing_description">Shooting at your special events: fashion shows, benefit events, gala banquets, etc.</p>
+            <a href="#contact-form">Learn more</p>
+            </section>
+            <section>
+            <img width="150" src="img/pricing_campaigns.png" alt="Campaigns"
+            <p class="service name">Campaigns</p>
+            <p class="costs">from $180/hour</p>
+            <p class="pricing_description">Shootings for magazines, brands, e-commerce, advertising campaigns, lookbooks, etc.</p>
+            <a href="#contact-form">Learn more</p>
+            </section>
         </section>
 
-        <!--Block-13 Olha Stanislavska-->
-        <section class="faq">
-            <h2 class="faq__title h2-title text-align-center">FAQ</h2>
-            <hr class="faq__line line line-center">
-            <div class="faq__all-questions">
-                <details class="faq__question">
-                    <summary>Does Ryan shoot only in New York?</summary>
-                    Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
-                    other countries upon request.
-                </details>
-                <details class="faq__question">
-                    <summary>How long does the editing take?</summary>
-                    It all depends on the amount of footage and the number of photos that go through retouching.
-                </details>
-                <details class="faq__question">
-                    <summary>What does Ryan shoot?</summary>
-                    Ryan is a real guru of fashion, event, commercial photography, and portraits.
-                </details>
-                <details class="faq__question">
-                    <summary>How to schedule a shooting?</summary>
-                    Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
-                    best to find a time slot for you.
-                </details>
-                <details class="faq__question">
-                    <summary>What if I have a creative idea for shooting?</summary>
-                    Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
-                    really creative.
-                </details>
-                <details class="faq__question">
-                    <summary>Where can I find Ryan's works?</summary>
-                    Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
-                    and
-                    many others.
-                </details>
-            </div>
-        </section>
+            <!--Block-12 Olha Stanislavska-->
+            <section class="portfolio">
+                <h2 class="portfolio__title h2-title text-align-center">Portfolio</h2>
+                <hr class="portfolio__line line line-center">
+                <p class="portfolio__subtitle subtitle uppercase">Every frame is important. Every photoshoot is art.</p>
+                <img class="portfolio__image" width="360" src="img/portfolio-girl-in-lush-dress.png"
+                    alt="A girl in a lush dress">
+                <img class="portfolio__image" width="360" src="img/portfolio-girl-with-mirror.png"
+                    alt="A girl with a mirror">
+                <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-flower-earring.png"
+                    alt="A portrait of the girl in flower earring">
+                <img class="portfolio__image" width="360" src="img/portfolio-portrait-with-hand.png"
+                    alt="A portrait of the girl with hand near her face">
+            </section>
+
+            <!--Block-13 Olha Stanislavska-->
+            <section class="faq">
+                <h2 class="faq__title h2-title text-align-center">FAQ</h2>
+                <hr class="faq__line line line-center">
+                <div class="faq__all-questions">
+                    <details class="faq__question">
+                        <summary>Does Ryan shoot only in New York?</summary>
+                        Most of Ryan's projects are in New York but shooting is possible in other cities of the USA and
+                        other countries upon request.
+                    </details>
+                    <details class="faq__question">
+                        <summary>How long does the editing take?</summary>
+                        It all depends on the amount of footage and the number of photos that go through retouching.
+                    </details>
+                    <details class="faq__question">
+                        <summary>What does Ryan shoot?</summary>
+                        Ryan is a real guru of fashion, event, commercial photography, and portraits.
+                    </details>
+                    <details class="faq__question">
+                        <summary>How to schedule a shooting?</summary>
+                        Fill out the form below or contact Ryan directly. Tell which date you need, and Ryan will do his
+                        best to find a time slot for you.
+                    </details>
+                    <details class="faq__question">
+                        <summary>What if I have a creative idea for shooting?</summary>
+                        Ryan is open for inquires and interesting opportunities. TFP shoots are possible if your idea is
+                        really creative.
+                    </details>
+                    <details class="faq__question">
+                        <summary>Where can I find Ryan's works?</summary>
+                        Ryan's works are published in different fashion magazines: Haper's Bazaar, Vogue, Cosmopolitan,
+                        and
+                        many others.
+                    </details>
+                </div>
+            </section>
 
     </main>
 
     <!-- Block-14 Христина Брошко-->
+    <a name="contact-form"></a>
     <section class="form">
         <footer class="footer">
             <div class="footer_contacts">
