fixed the bug in <a>...

--- a/index.html
+++ b/index.html
@@ -242,28 +242,28 @@
             <p class="service name">Portraits</p>
             <p class="costs">from $120/hour</p>
             <p class="pricing_description">Capturing your beauty in every detail. The price includes 3 styles and 20 edited photos per style.</p>
-            <a href="#contact-form">Learn more</p>
+            <a href="#contact-form">Learn more</a>
             </section>
             <section>
             <img width="150" src="img/pricing_street_style.png" alt="Street Style"
             <p class="service name">Street Style</p>
             <p class="costs">from $130/hour</p>
             <p class="pricing_description">It is the best option to show your brand in the everyday scenery. Changing tent provided.</p>
-            <a href="#contact-form">Learn more</p>
+            <a href="#contact-form">Learn more</a>
             </section>
             <section>
             <img width="150" src="img/pricing_events.png" alt="Events"
             <p class="service name">Events</p>
             <p class="costs">from $150/hour</p>
             <p class="pricing_description">Shooting at your special events: fashion shows, benefit events, gala banquets, etc.</p>
-            <a href="#contact-form">Learn more</p>
+            <a href="#contact-form">Learn more</a>
             </section>
             <section>
             <img width="150" src="img/pricing_campaigns.png" alt="Campaigns"
             <p class="service name">Campaigns</p>
             <p class="costs">from $180/hour</p>
             <p class="pricing_description">Shootings for magazines, brands, e-commerce, advertising campaigns, lookbooks, etc.</p>
-            <a href="#contact-form">Learn more</p>
+            <a href="#contact-form">Learn more</a>
             </section>
         </section>
 
