--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <img width="400" src="img/photographer_takes_a_photo_of_the_girl.png"
                 alt="Photographer takes a photo of the girl.">
         </div>
-        <section class="About-photographer">
-            <h2 class="About-photographer__title line line-left">About Ryan Allen</h2>
-            <hr class="About-photographer__line">
+        <section id="About-photographer">
+            <h2 class="About-photographer h2-title text-align-left">About Ryan Allen</h2>
+            <hr class="About-photographer__line line line-left">
             <p class="About-photographer__text">Professional photographer taking your brand and identify to the next
                 level.</p>
             <p class="About-photographer__text">Having worked and learned from world artists such as John Maison, Steven
@@ -78,9 +78,9 @@
             <a class="About-photographer__button" href="#">Learn more</a>
         </section>
         <!--Block-3 Oleksii Novosiadlo-->
-        <div class="latest-work">
-            <h2 class="latest-work__title">Latest Works</h2>
-            <hr class="latest-work__line">
+        <div id="latest-work">
+            <h2 class="latest-work h2-title text-align-center">Latest Works</h2>
+            <hr class="latest-work__line line line-center">
             <p class="latest-work__text subtitle uppercase text-align-center">Ryan's passion is photoshoots for lookbook
                 and commercial.</p>
             <div class="latest-work__photos">
