--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img width="400" src="img/photographer_takes_a_photo_of_the_girl.png"
                 alt="Photographer takes a photo of the girl.">
         </div>
-        <section id="About-photographer">
+        <section id="about">
             <h2 class="About-photographer h2-title text-align-left">About Ryan Allen</h2>
             <hr class="About-photographer__line line line-left">
             <p class="About-photographer__text">Professional photographer taking your brand and identify to the next
@@ -78,7 +78,7 @@
             <a class="About-photographer__button" href="#">Learn more</a>
         </section>
         <!--Block-3 Oleksii Novosiadlo-->
-        <div id="latest-work">
+        <div id="works">
             <h2 class="latest-work h2-title text-align-center">Latest Works</h2>
             <hr class="latest-work__line line line-center">
             <p class="latest-work__text subtitle uppercase text-align-center">Ryan's passion is photoshoots for lookbook
