test added a paragraph

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
             <p class="subtitle uppercase">the cost of shooting can be discussed according to the conditions.</p>
             </section>
             <section>
-            <img width="150" src="img/pricing_portraits.png" alt="Portraits"
+            <p img width="150" src="img/pricing_portraits.png" alt="Portraits"></p>
             <p class="service name">Portraits</p>
             <p class="costs">from $120/hour</p>
             <p class="pricing_description">Capturing your beauty in every detail. The price includes 3 styles and 20 edited photos per style.</p>
-            <a href="#contact-form">Learn more</a>
+            <p a href="#contact-form">Learn more</a>></p>
             </section>
             <section>
             <img width="150" src="img/pricing_street_style.png" alt="Street Style"
