--- a/index.html
+++ b/index.html
@@ -60,22 +60,27 @@
             <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots">
         </section>
         <!--Block-2 Oleksii Novosiadlo-->
-        <div class="main__photo-of-girl">
-            <img width="400" src="img/photographer_takes_a_photo_of_the_girl.png"
-                alt="Photographer takes a photo of the girl.">
-        </div>
         <section id="about">
-            <h2 class="About-photographer h2-title text-align-left">About Ryan Allen</h2>
-            <hr class="About-photographer__line line line-left">
-            <p class="About-photographer__text">Professional photographer taking your brand and identify to the next
-                level.</p>
-            <p class="About-photographer__text">Having worked and learned from world artists such as John Maison, Steven
-                Ferrel, Stanley Fingerstone, and Pierre de Fontanier in the course of his photographic sojourn at New
-                York, Ryan is undoubtedly a real craftsman who is able to see the beauty in ordinary things. </p>
-            <p class="About-photographer__text">As one of the best fashion photographers in New York City, Ryan Allen
-                has had the pleasure of working with Vogue, Cosmopolitan, Yves Saint Laurent, Harper’s Bazaar, Karl
-                Lagerfeld, Bella Hadid, Alexandra Daddario, and many others fashion brands and models.</p>
-            <a class="About-photographer__button" href="#">Learn more</a>
+            <div class="main__photo-of-girl">
+                <img width="400" src="img/photographer_takes_a_photo_of_the_girl.png"
+                    alt="Photographer takes a photo of the girl.">
+            </div>
+            <div>
+                <h2 class="About-photographer h2-title text-align-left">About Ryan Allen</h2>
+                <hr class="About-photographer__line line line-left">
+                <p class="About-photographer__text">Professional photographer taking your brand and identify to the next
+                    level.</p>
+                <p class="About-photographer__text">Having worked and learned from world artists such as John Maison,
+                    Steven
+                    Ferrel, Stanley Fingerstone, and Pierre de Fontanier in the course of his photographic sojourn at
+                    New
+                    York, Ryan is undoubtedly a real craftsman who is able to see the beauty in ordinary things. </p>
+                <p class="About-photographer__text">As one of the best fashion photographers in New York City, Ryan
+                    Allen
+                    has had the pleasure of working with Vogue, Cosmopolitan, Yves Saint Laurent, Harper’s Bazaar, Karl
+                    Lagerfeld, Bella Hadid, Alexandra Daddario, and many others fashion brands and models.</p>
+                <a class="About-photographer__button" href="#">Learn more</a>
+            </div>
         </section>
         <!--Block-3 Oleksii Novosiadlo-->
         <div id="works">
@@ -107,7 +112,8 @@
                 <li class="streetphoto">
                     <img class="streetphoto-icon" src="img/streetphoto-icon.png" alt="streetphoto-icon">
                     <h3 class="sevrvices__street-style">Street Style</h3>
-                    <p class="services__street-style__big-text">Catching the brightest moments in the scenery of the big city.</p>
+                    <p class="services__street-style__big-text">Catching the brightest moments in the scenery of the big
+                        city.</p>
                     <a class="services__street-style__request-a-quote" href="#">REQUEST A QUOTE</a>
                 </li>
                 <li class="advertising">
