--- a/index.html
+++ b/index.html
@@ -275,22 +275,32 @@
         </section>
     </main>
     <!-- Block-14 Христина Брошко-->
-    <section class="form">
-        <footer class="footer">
-            <div class="footer_contacts">
-                <form action="https://formspree.io/f/mwkzwgke" method="post">
-                    <hr class="Form_for_users">
-                    <h2>Let's start a conversation.<h2>
-                            <div class="row"></div>
-                            <p>RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.</p>
-                            <input type="name" class="user_name" placeholder="Enter your full name*" required="">
-                            <input type="tel" class="user_tel" placeholder="Enter your phone number*" required="">
-                            <input type="date" class="date">
-                            <textarea name="message" cols="30" rows="10"></textarea>
-                            <input type="submit" value="Request a quote">
+    <div class="page_form">
+        <div class="block-form">
+            <div class="text_form">
+                Let`s start a conversation.
+                <hr>
             </div>
-        </footer>
-    </section>
+            <div class="sub_text_form">
+                RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.
+            </div>
+            <div class="forms">
+                <form action="https://formspree.io/f/mwkzwgke" method="post">
+                    <input type='text' name='firstname' value="Enter your full name*">
+                    <br><br>
+                    <input type='text' name='phone_number' value="Enter your phone number*">
+                    <br><br>
+                    <label for="date">Choose date</label>
+                    <input type="date" id="date" name="date"/>
+                    <br><br>
+                    <input type='text' name='message' value="Leave your message">
+                    <br><br>
+                    <input type='submit' value='REQUEST A QUOTE'>
+                   
+                  </form>
+            </div>
+        </div>
+    </div>
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
     </footer>
