--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
         </section>
     </main>
-    <!-- Block-14 Христина Брошко-->
+    <!-- Khrystyna Broshko -->
     <div class="page_form">
         <div class="block-form">
             <div class="text_form">
@@ -297,13 +297,13 @@
                     <input type='text' name='phone_number' value="Enter your phone number*">
                     <br><br>
                     <label for="date">Choose date</label>
-                    <input type="date" id="date" name="date"/>
+                    <input type="date" id="date" name="date" />
                     <br><br>
                     <input type='text' name='message' value="Leave your message">
                     <br><br>
                     <input type='submit' value='REQUEST A QUOTE'>
-                   
-                  </form>
+
+                </form>
             </div>
         </div>
     </div>
