--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Oleh Onopriichuk-->
     <!-- Віктор Зварич -->
     <!-- Block-0 Віктор Зварич -->
+    <!-- Миронюк Марта -->
     <header class="header">
         <nav class="header__nav">
             <a href="/" class="logo">
