created some elements

--- a/index.html
+++ b/index.html
@@ -230,6 +230,35 @@
                 <img src="img/testimonial-diana-peterson.png" width="300" alt="Diana Peterson">
             </div>
         </section>
+        <!--Block-9 Myroniuk Marta-->
+        <section>
+            <header>
+                <h1>Collaboration</h1>
+                <hr/>
+                <h5>Let`s create something great and beautiful together.</h5>
+            </header>
+            <div>
+                <img/>
+                <ol>
+                    <li>
+                        <h1>Contact Ryan</h1>
+                        <h5>You can call or write Ryan Allen, or simply fill out the contact form on this website</h5>
+                    </li>
+                    <li>
+                        <h1>Choose the date</h1>
+                        <h5>Indicate where the shooting will take place, specify the preferred date and exact time.</h5>
+                    </li>
+                    <li>
+                        <h1>Take care of the details</h1>
+                        <h5>Make sure that the studio is rented, models are booked and there's everything necessary for the shooting.</h5>
+                    </li>
+                    <li>
+                        <h1>Get the perfect photos!</h1>
+                        <h5>All photos will be ready in a maximum of 2 months if you need retouch services.</h5>
+                    </li>
+                </ol>
+            </div>
+        </section>
         <!--Block-12 Olha Stanislavska-->
         <section class="portfolio">
             <h2 class="portfolio__title h2-title text-align-center">Portfolio</h2>
