--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <h5>Let`s create something great and beautiful together.</h5>
             </header>
             <div>
-                <img/>
+                <img src="./img/section-9-women-on-the-chair.png" alt="Woman on the chair"/>
                 <ol>
                     <li>
                         <h1>Contact Ryan</h1>
