--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
         <section>
             <header>
                 <h1>Collaboration</h1>
-                <hr/>
+                <hr />
                 <h5>Let`s create something great and beautiful together.</h5>
             </header>
             <div>
-                <img src="./img/section-9-women-on-the-chair.png" alt="Woman on the chair"/>
+                <img src="./img/section-9-women-on-the-chair.png" alt="Woman on the chair" />
                 <ol>
                     <li>
                         <h1>Contact Ryan</h1>
@@ -250,7 +250,8 @@
                     </li>
                     <li>
                         <h1>Take care of the details</h1>
-                        <h5>Make sure that the studio is rented, models are booked and there's everything necessary for the shooting.</h5>
+                        <h5>Make sure that the studio is rented, models are booked and there's everything necessary for
+                            the shooting.</h5>
                     </li>
                     <li>
                         <h1>Get the perfect photos!</h1>
@@ -327,7 +328,7 @@
                     <input type='text' name='phone_number' value="Enter your phone number*">
                     <br><br>
                     <label for="date">Choose date</label>
-                    <input type="date" id="date" name="date" />
+                    <input type="date" id="date" name="date">
                     <br><br>
                     <input type='text' name='message' value="Leave your message">
                     <br><br>
