changed classes, added comments about responsible for blocks

--- a/index.html
+++ b/index.html
@@ -8,41 +8,50 @@
     <title>R.Allen Photography</title>
 </head>
 
+<!-- 
+Block-0 Віктор Зварич
+Block-1 Віктор Зварич
+Block-2 Олексій Новосядло
+Block-3 Олексій Новосядло
+Block-4 Бандура Роман
+Block-5 Бандура Роман
+Block-6 Олег Онопрійчук
+Block-7 Миронюк Марта
+Block-8 Юрій Мурачов
+Block-9 Миронюк Марта
+Block-10 Максим Мельник
+Block-11 Максим Мельник
+Block-12 Ольга Станіславська
+Block-13 Ольга Станіславська
+Block-14 Брошко Христина
+Block-15 Віктор Зварич -->
+
 <body>
-    <!--Новосядло Олексій-->
-    <!-- Максим Мельник -->
-    <!-- Ольга Станіславська -->
-    <!-- bandura roman -->
-    <!-- Христина Брошко -->
-    <!--Юрій-->
-    <!-- Oleh Onopriichuk-->
-    <!-- Віктор Зварич -->
     <!-- Block-0 Віктор Зварич -->
-    <!-- Миронюк Марта -->
     <header class="header">
         <nav class="header__nav">
-            <a href="/" class="logo">
-                <img class="logo-image" src="img/logo.svg" width="174"
+            <a href="/" class="header__logo">
+                <img class="header__logo-image" src="img/logo.svg" width="174"
                     alt="Logo image of the 'R.Allen Photography' website">
             </a>
             <ul class="nav-menu">
-                <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#about">About</a>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#about">About</a>
                 </li>
-                <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#services">Services</a>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#services">Services</a>
                 </li>
-                <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#works">Latest works</a>
+                <li class="nav-men__item">
+                    <a class="nav-menu__link" href="#works">Latest works</a>
                 </li>
-                <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#pricing">Pricing</a>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#pricing">Pricing</a>
                 </li>
-                <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#testimonials">Testimonials</a>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#testimonials">Testimonials</a>
                 </li>
-                <li class="nav-menu-item">
-                    <a class="nav-menu-link" href="#contact-form">Contact Ryan</a>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#contact-form">Contact Ryan</a>
                 </li>
             </ul>
         </nav>
@@ -54,11 +63,11 @@
                 <span class="hero__profession uppercase">Fashion photographer</span>
                 <span class="hero__name">Ryan Allen</span>
             </h1>
-            <hr class="main__banner-line">
-            <p class="main__banner-text capitalized">A New York based photographer specializing in women’s and men’s
+            <hr class="hero__line line line-center">
+            <p class="hero__text subtitle uppercase">A New York based photographer specializing in women’s and men’s
                 fashion, street style, event, and portrait photography.</p>
-            <a href="#contact-form" class="main__banner-button capitalized">Contact Ryan</a>
-            <img class="main__banner-three-dots" src="img/dots.svg" alt="Three dots">
+            <a href="#contact-form" class="hero__button uppercase">Contact Ryan</a>
+            <img class="hero__image-dots" src="img/dots.svg" alt="Three dots">
         </section>
         <!--Block-2 Oleksii Novosiadlo-->
         <section id="about">
