Added new block (basic structure)

--- a/index.html
+++ b/index.html
@@ -183,6 +183,25 @@ Block-15 Віктор Зварич -->
                 </div>
             </div>
         </section>
+        <!--Block-7 Marta Myroniuk-->
+        <section>
+            <header>
+                <h1>Brands</h1>
+                <hr />
+                <h5>RYAN HAD GREAT PLEASURE OF WORKING WITH THE FOLLOWING BRANDS.</h5>
+            </header>
+            <div>
+              <div>"<"</div> <!--Replace with the real arrow-->  
+              <div>
+                <img src="./img/cosmo.png" alt="Cosmolitan"/>
+                <img src="./img/ys.png" alt="YvesSaintLaurent"/>
+                <img src="./img/bazar.png" alt="Bazaar"/>
+                <img src="./img/bulgari.png" alt="Bvlgari"/>
+                <img src="./img/vogue.png" alt="Vogue"/>
+              </div>
+              <div>">"</div> <!--Replace with the real arrow-->
+            </div>
+        </section>
         <!--Block-8 Yriy Murachov-->
         <section id="testimonials" class="testimonials">
             <div class="testimonials__block__title">
@@ -245,7 +264,7 @@ Block-15 Віктор Зварич -->
             <header>
                 <h1>Collaboration</h1>
                 <hr />
-                <h5>Let`s create something great and beautiful together.</h5>
+                <h5>LET'S CREATE SOMETHING GREAT AND BEAUTIFUL TOGETHER.</h5>
             </header>
             <div>
                 <img src="./img/section-9-women-on-the-chair.png" alt="Woman on the chair" />
