--- a/index.html
+++ b/index.html
@@ -191,72 +191,76 @@ Block-15 Віктор Зварич -->
                 <h5>RYAN HAD GREAT PLEASURE OF WORKING WITH THE FOLLOWING BRANDS.</h5>
             </header>
             <div>
-              <div>"<"</div> <!--Replace with the real arrow-->  
-              <div>
-                <img src="./img/cosmo.png" alt="Cosmolitan"/>
-                <img src="./img/ys.png" alt="YvesSaintLaurent"/>
-                <img src="./img/bazar.png" alt="Bazaar"/>
-                <img src="./img/bulgari.png" alt="Bvlgari"/>
-                <img src="./img/vogue.png" alt="Vogue"/>
-              </div>
-              <div>">"</div> <!--Replace with the real arrow-->
-            </div>
+                <div>"<"< /div>
+                        <!--Replace with the real arrow-->
+                        <div>
+                            <img src="./img/cosmo.png" alt="Cosmolitan" />
+                            <img src="./img/ys.png" alt="YvesSaintLaurent" />
+                            <img src="./img/bazar.png" alt="Bazaar" />
+                            <img src="./img/bulgari.png" alt="Bvlgari" />
+                            <img src="./img/vogue.png" alt="Vogue" />
+                        </div>
+                        <div>">"</div>
+                        <!--Replace with the real arrow-->
+                </div>
         </section>
         <!--Block-8 Yriy Murachov-->
-        <section id="testimonials" class="testimonials">
-            <div class="testimonials__block__title">
-                <p>TESTIMONIALS</p>
-            </div>
-            <div class="testimonials__block__name">
-                <p>Amanda Li, Vogue</p>
-            </div>
-            <div class="testimonials__block__text">
-                <p>Working with Ryan was an incredible experience. Everything was perfect from the very
-                    beginning of
-                    the
-                    photoshoot. Ryan is very talented in his field and you can really tell that he loves what he
-                    does.
-                    We
-                    absolutely love how all the images turned out and will go back to Ryan for future
-                    photoshoots.
-                </p>
-            </div>
-            <div class="testimonials__backgroundphoto">
-                <img src="img/testimonial-amanda-li.png" width="300" alt="Testimonial-Amanda-Li">
-            </div>
-            <div class="testimonials__block__title">
-                <p>TESTIMONIALS</p>
-            </div>
-            <div class="testimonials__block__name">
-                <p>Sam Hoe, YSL</p>
-            </div>
-            <div class="testimonials__block__text">
-                <p>We have only pleasant impressions from working with this photographer. Ryan took all our
-                    wishes
-                    into
-                    account and really pleased us with excellent quality and stylish frames. We will contact
-                    this
-                    photographer for shooting our next collections for commercials. </p>
-            </div>
-            <div class="testimonials__backgroundphoto">
-                <img src="img/testimonial-sam-hoe.png" width="300" alt="Testimonial Sam Hoe">
-            </div>
-            <div class="testimonials__block__title">
-                <p>TESTIMONIALS</p>
-            </div>
-            <div class="testimonials__block__name">
-                <p>Diana Peterson</p>
-            </div>
-            <div class="testimonials__block__text">
-                <p>I am a beginner fashion model and do not yet have much experience in commercial shootings.
-                    Ryan
-                    has a
-                    unique way of making you feel comfortable in the frame. He does a great job of finding the
-                    best
-                    location, providing direction, and listening to your wishes. </p>
-            </div>
-            <div class="testimonials__backgroundphoto">
-                <img src="img/testimonial-diana-peterson.png" width="300" alt="Diana Peterson">
+        <section id="testimonials">
+            <div class="testimonials">
+                <div class="testimonials__block__title">
+                    <p>TESTIMONIALS</p>
+                </div>
+                <div class="testimonials__block__name">
+                    <p>Amanda Li, Vogue</p>
+                </div>
+                <div class="testimonials__block__text">
+                    <p>Working with Ryan was an incredible experience. Everything was perfect from the very
+                        beginning of
+                        the
+                        photoshoot. Ryan is very talented in his field and you can really tell that he loves what he
+                        does.
+                        We
+                        absolutely love how all the images turned out and will go back to Ryan for future
+                        photoshoots.
+                    </p>
+                </div>
+                <div class="testimonials__backgroundphoto">
+                    <img src="img/testimonial-amanda-li.png" width="300" alt="Testimonial-Amanda-Li">
+                </div>
+                <div class="testimonials__block__title">
+                    <p>TESTIMONIALS</p>
+                </div>
+                <div class="testimonials__block__name">
+                    <p>Sam Hoe, YSL</p>
+                </div>
+                <div class="testimonials__block__text">
+                    <p>We have only pleasant impressions from working with this photographer. Ryan took all our
+                        wishes
+                        into
+                        account and really pleased us with excellent quality and stylish frames. We will contact
+                        this
+                        photographer for shooting our next collections for commercials. </p>
+                </div>
+                <div class="testimonials__backgroundphoto">
+                    <img src="img/testimonial-sam-hoe.png" width="300" alt="Testimonial Sam Hoe">
+                </div>
+                <div class="testimonials__block__title">
+                    <p>TESTIMONIALS</p>
+                </div>
+                <div class="testimonials__block__name">
+                    <p>Diana Peterson</p>
+                </div>
+                <div class="testimonials__block__text">
+                    <p>I am a beginner fashion model and do not yet have much experience in commercial shootings.
+                        Ryan
+                        has a
+                        unique way of making you feel comfortable in the frame. He does a great job of finding the
+                        best
+                        location, providing direction, and listening to your wishes. </p>
+                </div>
+                <div class="testimonials__backgroundphoto">
+                    <img src="img/testimonial-diana-peterson.png" width="300" alt="Diana Peterson">
+                </div>
             </div>
         </section>
         <!--Block-9 Myroniuk Marta-->
