--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
 </head>
 
 <body>
-    <!--Новосядло Олексій-->
-    <!-- Максим Мельник -->
-    <!-- Ольга Станіславська -->
-    <!-- bandura roman -->
-    <!-- Христина Брошко -->
-    <!--Юрій-->
-    <!-- Oleh Onopriichuk-->
-    <!-- Віктор Зварич -->
     <!-- Block-0 Віктор Зварич -->
     <header class="header">
         <nav class="header__nav">
@@ -230,7 +222,7 @@
             </div>
         </section>
 
-        <!--Block-11 "pricing" Maksym Melnyk -->
+        <!-- pricing by Maksym Melnyk -->
         <a name="pricing"></a>
         <section class="pricing">
             <section>
