--- a/index.html
+++ b/index.html
@@ -439,36 +439,44 @@ Block-15 Віктор Зварич -->
             </div>
         </section>
     </main>
-    <!-- Khrystyna Broshko -->
+   <!-- Khrystyna Broshko -->
+   <div class="main_form">
+    <div class="main_background_for_form">
+        <div class="background_for_form">
+            <div class="page_form">
+                <div class="block-form">
+                    <div class="text_form">
+                        Let`s start a conversation.
+                        <hr>
+                    </div>
+                    <div class="sub_text_form">
+                        RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.
+                    </div>
+                    <div class="forms">
+                        <form action="https://formspree.io/f/mwkzwgke" method="post">
+                            <div class="full_name_form"> <input type='text' name='firstname'
+                                    value="Enter your full name*">
+                            </div>
+                            <div class="full_name_form"><input type='text' name='phone_number'
+                                    value="Enter your phone number*">
+                            </div>
+                            <br><br>
+                            <div class="date_form"><label for="date">Choose date</label>
+                                <input type="date" id="date" name="date">
+                            </div>
+                            <br><br>
+                            <div class="full_name_form"><input type='text' name='message'
+                                    value="Leave your message"></div>
+                            <br><br>
+                            <input type='submit' class="button-submit" value='REQUEST A QUOTE'>
 
-    <div class="page_form">
-        <div class="block-form">
-            <div class="text_form">
-                Let`s start a conversation.
-                <hr>
-            </div>
-            <div class="sub_text_form">
-                RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.
-            </div>
-            <div class="forms">
-                <form action="https://formspree.io/f/mwkzwgke" method="post">
-                    <div class="full_name_form"> <input type='text' name='firstname' value="Enter your full name*">
+                        </form>
                     </div>
-                    <div class="full_name_form"><input type='text' name='phone_number' value="Enter your phone number*">
-                    </div>
-                    <br><br>
-                    <div class="date_form"><label for="date">Choose date</label>
-                        <input type="date" id="date" name="date">
-                    </div>
-                    <br><br>
-                    <div class="full_name_form"><input type='text' name='message' value="Leave your message"></div>
-                    <br><br>
-                    <input type='submit' class="button" value='REQUEST A QUOTE'>
-
-                </form>
+                </div>
             </div>
         </div>
     </div>
+</div>
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
     </footer>
