--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Block-15 Віктор Зварич -->
                 <li class="nav-menu__item">
                     <a class="nav-menu__link" href="#services">Services</a>
                 </li>
-                <li class="nav-men__item">
+                <li class="nav-menu__item">
                     <a class="nav-menu__link" href="#works">Latest works</a>
                 </li>
                 <li class="nav-menu__item">
