add css block-3

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ Block-15 Віктор Зварич -->
         </section>
         <!--Block-3 Oleksii Novosiadlo-->
         <div id="works">
-            <h2 class="latest-work h2-title text-align-center">Latest Works</h2>
-            <hr class="latest-work__line line line-center">
-            <p class="latest-work__text subtitle uppercase text-align-center">Ryan's passion is photoshoots for lookbook
+            <h2 class="latest-work__title h2-title">Latest Works</h2>
+            <hr class="latest-work__line">
+            <p class="latest-work__text">Ryan's passion is photoshoots for lookbook
                 and commercial.</p>
             <div class="latest-work__photos">
                 <img class="latest-work__image" width="300" src="img/girl_hides_from_sun.png"
