--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>R.Allen Photography</title>
     <link rel="shortcut icon" type="image/png" href="icons/tab-icone.png" sizes="16x16">
     <link rel="stylesheet" href="css/index.css">
+    <script type="text/javascript" src="js/works.js"></script>
 </head>
 
 <!-- 
@@ -112,12 +113,17 @@ Block-15 Віктор Зварич -->
             <p class="latest-work__text">Ryan's passion is photoshoots for lookbook
                 and commercial.</p>
             <div class="latest-work__photos">
-                <img class="latest-work__image" width="300" src="img/girl_hides_from_sun.png"
-                    alt="Girl hides from the sun">
-                <img class="latest-work__image" width="300" src="img/girl_in_a_half_turn.png"
-                    alt="A girl in a half turn">
-                <img class="latest-work__image" width="300" src="img/beautiful_girl_in_jacket.png"
-                    alt="Beatiful girl in a jacket">
+                <div class="latest-work__image latest-work__fade"><img src="img/girl_hides_from_sun.png" 
+                        alt="Girl hides from the sun">
+                </div>
+                <div class="latest-work__image latest-work__fade"><img src="img/girl_in_a_half_turn.png"
+                        alt="A girl in a half turn">
+                </div>
+                <div class="latest-work__image latest-work__fade"><img src="img/beautiful_girl_in_jacket.png"
+                        alt="Beatiful girl in a jacket">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">❮</a>
+                <a class="next" onclick="plusSlides(1)">❯</a>
             </div>
         </div>
         <!-- Block-4 bandura roman -->
