--- a/index.html
+++ b/index.html
@@ -113,17 +113,19 @@ Block-15 Віктор Зварич -->
             <p class="latest-work__text">Ryan's passion is photoshoots for lookbook
                 and commercial.</p>
             <div class="latest-work__photos">
-                <div class="latest-work__image latest-work__fade" style="display: block;"><img src="img/girl_hides_from_sun.png" 
+                <div class="latest-work__image latest-work__image__girl-sun latest-work__fade"><img src="img/girl_hides_from_sun.png" 
                         alt="Girl hides from the sun">
                 </div>
-                <div class="latest-work__image latest-work__fade" style="display: none;"><img src="img/girl_in_a_half_turn.png"
+                <div class="latest-work__image latest-work__image__girl-turn latest-work__fade"><img src="img/girl_in_a_half_turn.png"
                         alt="A girl in a half turn">
                 </div>
-                <div class="latest-work__image latest-work__fade" style="display: none;"><img src="img/beautiful_girl_in_jacket.png"
+                <div class="latest-work__image latest-work__image__girl-jaket latest-work__fade"><img src="img/beautiful_girl_in_jacket.png"
                         alt="Beatiful girl in a jacket">
                 </div>
-                <a class="prev" onclick="plusSlides(-1)">❮</a>
-                <a class="next" onclick="plusSlides(1)">❯</a>
+                <div class="latest-work__prev__container">
+                    <a class="latest-work__prev" onclick="plusSlides(-1)">❮</a>
+                </div> 
+                <a class="latest-work__next" onclick="plusSlides(1)">❯</a>
             </div>
         </div>
         <!-- Block-4 bandura roman -->
