added styles for header and hero

--- a/index.html
+++ b/index.html
@@ -58,20 +58,25 @@ Block-15 Віктор Зварич -->
                 </li>
             </ul>
         </nav>
-    </header>
-    <main class="main">
         <!-- Block-1  Віктор Зварич -->
         <section class="hero">
-            <h1 class="hero__title h2-title text-align-center">
-                <span class="hero__profession uppercase">Fashion photographer</span>
-                <span class="hero__name">Ryan Allen</span>
-            </h1>
-            <hr class="hero__line line line-center">
-            <p class="hero__text subtitle uppercase">A New York based photographer specializing in women’s and men’s
-                fashion, street style, event, and portrait photography.</p>
-            <a href="#contact-form" class="hero__button uppercase">Contact Ryan</a>
-            <img class="hero__image-dots" src="img/dots.svg" alt="Three dots">
+            <div class="hero__item">
+                <h1 class="hero__title">
+                    <span class="hero__profession uppercase">Fashion photographer</span>
+                    <span class="hero__name">Ryan Allen</span>
+                </h1>
+                <div class="hero__line short-line"></div>
+                <p class="hero__subtitle subtitle uppercase">A New York based photographer specializing in women’s and men’s
+                    fashion, street style, event, and portrait photography.</p>
+                <a href="#contact-form" class="secondary-btn uppercase">Contact Ryan</a>
+                <img class="hero__image-dots" src="img/dots.svg" alt="Three dots">
+            </div>
+            <div class="hero__item">
+            </div>
         </section>
+    </header>
+    
+    <main class="main">
         <!--Block-2 Oleksii Novosiadlo-->
         <section id="about">
             <div class="main__photo-of-girl">
